# p4c

./: .bazelrc  .gitmodules  BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  repositories.bzl
backends/p4tools/: BUILD.bazel
bazel/: BUILD.extension.bazel  bison.bzl  build_defs.bzl  flex.bzl  lex.bzl  p4c_deps.bzl  p4runtime.patch  p4runtime_proto.BUILD
bazel-build/: WORKSPACE  bison.bzl  gtest.BUILD  p4c.BUILD
bazel/boost/: boost.BUILD  boost.bzl
bazel/example/: BUILD.bazel
